service.yaml
apiVersion: v1
kind: Service
metadata:
  name: a3-status-demo
  namespace: a3-gitops-demo
  labels:
    app.kubernetes.io/name: a3-status-demo
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app.kubernetes.io/name: a3-status-demo
